[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ker-parser"
version = "1.0.0"
description = "A parser and CLI for .ker config files with JSON interop."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
  { name = "KeiraOMG0" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[project.scripts]
ker = "ker.tool:main"

[tool.setuptools.packages.find]
where = ["."]
