[metadata]
name = ker_parser
version = 0.1.0
description = A parser and CLI for .ker config files with JSON interop.
long_description = file: README.md
long_description_content_type = text/markdown
author = KeiraOMG0
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8

[options.entry_points]
console_scripts =
    ker = ker_parser.main:main
